...
        .padding()
        .toolbar {
            ToolbarItem(placement: .topBarTrailing) {
                Button {
                    saveMood()
                } label: {
                    Text("Save")
                }
                .disabled(moodLevel <= 0.01)
                .fontWeight(.semibold)
            }
        }
        .navigationTitle("Choose your Mood Level")
...
