...
        }
        .toolbar {
            ToolbarItem(placement: .topBarTrailing) {
                Button {
                    showAddQuote.toggle()
                } label: {
                    Image(systemName: "rectangle.stack.badge.plus")
                }
            }
        }
        .sheet(isPresented: $showAddQuote, onDismiss: {
            if let day = days.last {
                if day.quoteOfTheDay == nil {
...
